--- a/TSNE.Rmd
+++ b/TSNE.Rmd
@@ -9,187 +9,41 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-A continuación vamos a hacer uso del algoritmo t-SNE ya que, como vimos en el método de
-PCA no pudimos reducir la dimensión de los datos debido a que las variables que tenemos
-en nuestra base de datos no estaban muy correlacionadas y al momento de aplicar PCA perdiamos
-mucha varianza por lo que no era un método efectivo.
-
-Cargamos nuestras librerías.
-```{r}
-library(tidyverse)
-library(tidymodels)
-library(modeldata)
-library(embed)
-library(tsne)
-library(uwot)
-library(scattermore)
-library(readr)
-library(Rtsne)
-library(gganimate)
-library(data.table)
-```
-
-Cargamos nuestra base de datos y la guardamos en un dataframe
-```{r}
-df<-read.csv("C:/Users/Jonat/Downloads/water_potability.csv")
-
-df %>% dim()
-
-df %>% glimpse()
-
-df %>% head()
-```
-
-Observemos los valores faltantes
-```{r}
-colSums(is.na(df))
-
-df %>% summary()
-```
-
-### Imputamos datos con la función mice
-```{r}
-imputed_data <- mice(df, m = 5, method = 'pmm', maxit = 5, seed = 123)
-
-# Ver los datos imputados
-summary(imputed_data)
-
-# Obtener el conjunto de datos completo
-df <- complete(imputed_data, 1)
-```
-Imputamos los datos faltantes y ya no tenemos valores faltantes y pasamos la variable 
-Potability como factor
-```{r}
-df
-colSums(is.na(df))
-
-df <- df %>% 
-  mutate(Potability = relevel(as.factor(Potability), "0", "1"))
-```
-###Aplicamos el método t-sne, recordemos que la dunción tsne se tarda un poco en correr y además 
-no vamos a proponer hiper-parametros, es decir, con los hiper-parametros de default
-```{r}
-
-
-```
-
-
-
-# Adicionando los resultados de  t-SNE a la base
-```{r}
-datos<-data.frame(tSNE1=df_tsne[,1],tSNE2=df_tsne[,2],diagnostico=df$potability)
-head(datos)
-
-ggplot(datos,aes(x=tSNE1,y=tSNE2,color=potability))+
-geom_point(size=1.5)+
-labs(title="WDBC: t-sne")
-```
-
-
-
-###Los argumentos de esta funcion son:
-
-###k: the dimension of the resulting embedding
-
-###initial_dims: The number of dimensions to use in reduction method.
-
-###perplexity: Perplexity parameter. (optimal number of neighbors)
-
-###max_iter: Maximum number of iterations to perform.
-
-###min_cost: The minimum cost value (error) to halt iteration.
-
-###epoch_callback: A callback function used after each epoch (an epoch here means a set number of iterations)
-###                (Una función de devolución de llamada utilizada después de cada época (una época aquí significa un número determinado de iteraciones))
-
-###epoch: The number of iterations in between update messages.
-
-###Se puede correr con una selección arbitraria de los parámetros más importantes que son: perplexity, max_iter y min_cost, en ese orden
-
-###Otra funcion para hacerlo en este caso utilizaremos la función Rtsne la cual es más rápida
-que la función tsne
-```{r}
+A continuación vamos a hacer uso del algoritmo t-SNE ya que, como vimos en el método de PCA, con el paquete `Rtsne`.
+```{r, message=FALSE, warning=FALSE}
 set.seed(123)
 
 df_Rtsne <- df %>%
   dplyr::select(where(is.numeric)) %>%
   scale() %>%
-  Rtsne() 
-
-str(df_Rtsne)
+  Rtsne()
 ```
 
+**Agregando los resultados de  t-SNE a la base:**
 
-```{r}
-datos1<-data.frame(Rtsne1=df_Rtsne$Y[,1],Rtsne2=df_Rtsne$Y[,2],potabilidad=df$Potability)
-
-ggplot(datos1,aes(x=Rtsne1,y=Rtsne2,color=potabilidad))+
-geom_point(size=1.5)+
-labs(title="WDBC: Rtsne")
+```{r, warning=FALSE, message=FALSE}
+datos1<-data.frame(Rtsne1=df_Rtsne$Y[,1],Rtsne2=df_Rtsne$Y[,2],Potability=df$Potability)
 ```
 
-Podemos observar que aplicando Rtsne si nos clasifica en dos grupo diferentes nuestros registros
+```{r, warning=FALSE, message=FALSE, echo=FALSE}
+ggplot(datos1,aes(x=Rtsne1,y=Rtsne2,color=Potability))+
+  geom_point(size=1.5) +
+  scale_color_manual(values = c("0" = "#ec7d15", "1" = "#10b9ec")) +
+  labs(title="Potabilidad: Rtsne")
 
-Veamos ahora aplicando la misma función pero modficando hipermarametros en este caso vamos a usar el hiperparametro que es perplexity con valores (10,15,20,25,30 y 50)
-```{r}
-###Rtsne exploracion de parametros
+```
+Podemos observar que aplicando Rtsne no se ve una separación de los grupos.
+
+Veamos ahora aplicando la misma función pero modificando hiperparámetros: perplexity y la tasa de aprendizaje.
+* perplexity: Con los valores de 10, 15, 20, 25 30,
+* Tasa de aprendizaje: con los valores de 10, 50, 100, 150.
+
+```{r, message=FALSE, warning=FALSE, results = "hide"} 
 set.seed(123)
-Rtsne_params <-  expand.grid(perplexity=c(10,15,20,25,30,50))
-	
-Rtsne_res <- lapply(seq(nrow(Rtsne_params)), function(i) {
-	print(i)
-	Rres <- Rtsne::Rtsne(
-		X = df[,-1],
-            max_iter = 500,
-            verbose=TRUE,
-            perplexity = Rtsne_params[[1]][i],
-            check_duplicates = FALSE
-		
-	)
-	
-	return(Rres)
-})
-```
-Vamos a visualizar las diferentes clasificaciones que hizo la función cambiando el hiperparametro
-```{r}
-d2 <- rbindlist(lapply(seq(nrow(Rtsne_params)), function(i) {
-	data.table(
-		x = Rtsne_res[[i]]$Y[,1],
-		y = Rtsne_res[[i]]$Y[,2],
-		perplexity = Rtsne_params[[1]][i],
-		group = df$Potability
-	)
-}))
-												  
-p2 <- ggplot(d2) +
-	geom_scattermore(
-		mapping = aes(x = x, y = y,colour=group),
-		pointsize = 2
-	) +
-	theme(
-		axis.text = element_blank(),
-		axis.ticks = element_blank(),
-		axis.title = element_blank(),
-		legend.position = "none"
-	) +
-	facet_wrap("perplexity" , 
-		labeller = label_both,
-		scales = "free")
-p2 <- p2 + theme_minimal() +
-	theme(legend.position = "none")
-p2
-```
-Notemos que cambiando el hiperparametro de perplexity nos divide por grupos pero se observan
-los puntos mezclados por lo que no nos hace una división de nuestros datos clara
-
-Ahora veamos como trabaja el método pero ahora cambiando dos hiperparametros los cuales son 
-la perplexity y eta que es la tasa de aprendizaje
-
-```{r}
-set.seed(123)
-Rtsne_params2 = expand.grid(perplexity=c(10,15,20,25,30), eta = c(10, 50, 100, 150))  ###eta: tasa de aprendizaje
+Rtsne_params2 = expand.grid(perplexity=c(10,15,20,25,30), eta = c(10, 50, 100, 150))
 
 Rtsne_res2 = lapply(seq(nrow(Rtsne_params2)), function(i) {
+  print(i)
   Rres = Rtsne(
     X = df[,-1],
     max_iter = 500,
@@ -202,8 +56,8 @@ Rtsne_res2 = lapply(seq(nrow(Rtsne_params2)), function(i) {
   return(Rres)
 })
 ```
-Graficamos
-```{r}
+
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
 
 d3 = rbindlist(lapply(seq(nrow(Rtsne_params2)), function(i) {
   data.table(
@@ -211,16 +65,16 @@ d3 = rbindlist(lapply(seq(nrow(Rtsne_params2)), function(i) {
     y = Rtsne_res2[[i]]$Y[,2],
     perplexity = Rtsne_params2[[1]][i],
     eta = Rtsne_params2[[2]][i],
-    group = df$Potability
+    Potability = df$Potability
   )
 }))
-
 
 p3<-ggplot(d3) +
   geom_scattermore(
-    mapping = aes(x = x, y = y ,colour=group),
+    mapping = aes(x = x, y = y ,colour=Potability),
     pointsize = 2
   ) +
+  scale_colour_manual(values = c("0" = "#ec7d15", "1" = "#10b9ec")) +
   theme(
     axis.text = element_blank(),
     axis.ticks = element_blank(),
@@ -231,72 +85,22 @@ p3<-ggplot(d3) +
              labeller = label_both,
              scales = "free",
              ncol = 5) +
+  labs(title = "t-SNE con distinta Perplexities y tasa de aprendizaje", x = "Rtsne1", y = "Rtsne2") +
   theme_bw() 
-
 p3
 ```
-Veamos cambiando el vector de hiperparamteros
-```{r}
-set.seed(123)
-Rtsne_params3 = expand.grid(perplexity=c(10,15,20,30), eta = c(10, 50, 100, 150, 200))  ###eta: tasa de aprendizaje
 
-Rtsne_res3 = lapply(seq(nrow(Rtsne_params3)), function(i) {
-  Rres = Rtsne(
-    X = df[,-1],
-    max_iter = 500,
-    verbose=TRUE,
-    perplexity = Rtsne_params3$perplexity[i],
-    check_duplicates = FALSE,
-    eta = Rtsne_params3$eta[i],
-    pca = F
-  )
-  return(Rres)
-})
-```
+**El gif con la animación se incluye en la carpeta de envío.**
 
-Graficamos
+```{r, message=FALSE, warning=FALSE, include =FALSE}
+colores = c("0" = "#ec7d15","1" = '#10b9ec')
+# names(colores) = c("0","1")
 
-```{r}
-d4 = rbindlist(lapply(seq(nrow(Rtsne_params3)), function(i) {
-  data.table(
-    x = Rtsne_res3[[i]]$Y[,1],
-    y = Rtsne_res3[[i]]$Y[,2],
-    perplexity = Rtsne_params3[[1]][i],
-    eta = Rtsne_params3[[2]][i],
-    group = df$Potability
-  )
-}))
-
-
-p4<-ggplot(d4) +
-  geom_scattermore(
-    mapping = aes(x = x, y = y ,colour=group),
-    pointsize = 2
-  ) +
-  theme(
-    axis.text = element_blank(),
-    axis.ticks = element_blank(),
-    axis.title = element_blank(),
-    legend.position = "none"
-  ) +
-  facet_wrap(eta~perplexity ,
-             labeller = label_both,
-             scales = "free",
-             ncol = 5) +
-  theme_bw() 
-
-p4
-```
-
-```{r}
-colores = c('#E178C5','#EB5B00')
-names(colores) = c("0","1")
-
-anim_plot1<-d4 %>% 
-  filter(perplexity == 10 | perplexity == 15 | perplexity == 20 | perplexity == 30) %>% 
+anim_plot1<-d3 %>% 
+  filter(perplexity == 10 | perplexity == 15 | perplexity == 20 | perplexity == 25 | perplexity == 30) %>% 
   mutate(parametros = factor(paste('perplexity:', perplexity, 'eta:', eta))) %>% ggplot() +
   geom_scattermore(
-    mapping = aes(x = x, y = y, col = group),
+    mapping = aes(x = x, y = y, col = Potability),
     pointsize = 2
   ) +
   theme(
@@ -312,29 +116,8 @@ anim_plot1<-d4 %>%
   labs(title = '{closest_state}')
 
 animate(anim_plot1, nframes = 300)
+anim_save("gifTsne1.gif")
 ```
 
-
-```{r}
-anim_plot2<-d4 %>% 
-  filter(eta == 10 | eta == 50 | eta == 100 | eta == 150 | eta == 200) %>% 
-  mutate(parametros = factor(paste('perplexity:', perplexity, 'eta:', eta))) %>% ggplot() +
-  geom_scattermore(
-    mapping = aes(x = x, y = y, col = group),
-    pointsize = 2
-  ) +
-  theme(
-    axis.text = element_blank(),
-    axis.ticks = element_blank(),
-    axis.title = element_blank(),
-    legend.position = "none"
-  ) +
-  theme_bw()+
-  labs(title = 'Verificación de los parámetros')+
-  scale_color_manual(values = colores) + 
-  transition_states(parametros,transition_length = 3, state_length = 1) +
-  labs(title = '{closest_state}')
-
-animate(anim_plot2, nframes = 300)
-```
-
+### Conclusión t-SNE
+En los distintos casos de hiperparámetros podemos observar que con este método de reducción de dimensiones tampoco fue posible separar reducir la dimensión de los datos ni separar los grupos de potabilidad.
