--- a/UMAC.Rmd
+++ b/UMAC.Rmd
@@ -9,164 +9,41 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r}
-library(embed)
-library(tsne)
-library(uwot)
-library(scattermore)
-library(readr)
-library(Rtsne)
-library(baguette)
-library(discrim)
-library(gganimate)
-library(data.table)
-library(tidymodels)
+```{r, message=FALSE, warning=FALSE, include=FALSE}
 tidymodels_prefer()
 ```
 
-```{r}
-df<-read.csv("C:/Users/Jonat/Downloads/water_potability.csv")
 
-df %>% dim()
-
-df %>% glimpse()
-
-df %>% head()
-```
-```{r}
-imputed_data <- mice(df, m = 5, method = 'pmm', maxit = 5, seed = 123)
-
-# Ver los datos imputados
-summary(imputed_data)
-
-# Obtener el conjunto de datos completo
-df <- complete(imputed_data, 1)
-```
-```{r}
-#df <- df %>% 
-#  mutate(Potability = relevel(as.factor(Potability), "0", "1"))
-```
-
-
-```{r}
+```{r, message=FALSE, warning=FALSE, results = "hide"}
 # UMAP sin valores de los hiper-parametros
-
-library(embed)
 df_umap <- df %>%
   dplyr::select(where(is.numeric)) %>%
   scale() %>%
   umap()
-
-# Resultados
-
-str(df_umap)
 ```
 
-
-```{r}
+```{r, message=FALSE, warning=FALSE, echo = FALSE}
 #Base de datos
+datos<-data.frame(UMAP1=df_umap[,1],UMAP2=df_umap[,2],Potability=df$Potability)
 
-datos<-data.frame(UMAP1=df_umap[,1],UMAP2=df_umap[,2],Potabilidad=df$Potability)
-head(datos)
-
-ggplot(datos, aes(x = UMAP1, y = UMAP2, color = Potabilidad)) +
+ggplot(datos, aes(x = UMAP1, y = UMAP2, color = Potability)) +
   geom_point(size = 2) +
-  labs(title="WDBC: UMAP")
-
+    scale_color_manual(values = c("0" = "#ec7d15", "1" = "#10b9ec")) +
+  labs(title="Potabilidad: UMAP")
 ```
 
-```{r}
-###Otra forma
+Argumentos de esta función:
 
-umap_rec <- recipe(~., data = df) %>%
-  update_role(Potability, new_role = "id") %>%
-  step_normalize(all_predictors()) %>%
-  step_umap(all_predictors())
+* n_neighbors
+* n_components
+* metric
+* n_epochs
+* learning_rate
 
-umap_res <- prep(umap_rec)
+### UMAP: Exploracion de hiperparámetros
 
-umap_res
-```
-
-```{r}
-juice(umap_res) %>%
-  ggplot(aes(UMAP1, UMAP2)) +
-  geom_point(aes(color = Potability), size = 1.5)+
-  labs(color = NULL)
-
-```
-```{r}
-df
-```
-
-###Argumentos de esta funcion
-
-###n_neighbors: The size of local neighborhood (in terms of number of neighboring sample points)
-###             In general values should be in the range 2 to 100
-
-###n_components: The dimension of the space to embed into
-
-###metric: Type of distance metric to use to find nearest neighbors ("euclidean" (the default))
-
-###n_epochs: Number of epochs to use during the optimization of the embedded coordinates (default: 500)
-
-###learning_rate: Initial learning rate used in optimization of the coordinates, entre otros
-
-###No hay una menera automatizada de seleccionar los "mejores parametros". Asi que procederemos
-###de forma semejante al modelo de tSNE
-
-### UMAP: Exploracion de hiper-parametros
-
-#parametros
-```{r}
-umap_params = expand.grid(n_neighbors = c(10, 20, 50, 100),min_dist = c(0.5, 0.75, 1.1))
-
-umaps = lapply(seq(nrow(umap_params)), function(i) {
-    emb = umap(
-      X = df[,-10],
-      n_neighbors = umap_params$n_neighbors[i],
-      min_dist  = umap_params$min_dist[i])
-
-  return(emb)
-})
-```
-
-```{r}
-d = rbindlist(lapply(seq(nrow(umap_params)), function(i) {
-  data.table(
-    x = umaps[[i]][,1],
-    y = umaps[[i]][,2],
-    n_neighbors = umap_params$n_neighbors[i],
-    min_dist = umap_params$min_dist[i],
-    group = df$Potability
-  )
-}))
-```
-
-```{r}
-p<-ggplot(d) +
-  geom_scattermore(
-    mapping = aes(x = x, y = y,colour=group),
-    pointsize = 2
-  ) +
-  theme(
-    axis.text = element_blank(),
-    axis.ticks = element_blank(),
-    axis.title = element_blank(),
-    legend.position = "none"
-  ) +
-  facet_wrap(min_dist ~ n_neighbors ,
-             labeller = label_both,
-             scales = "free") +
-  theme_bw() +
-  labs(title = "WDBC: UMAP")
-
-p
-
-```
-
-```{r}
-umap_params1 = expand.grid(n_neighbors = c(50, 100, 150, 200),min_dist = c(0.5, 0.75, 1.1))
+```{r, message=FALSE, warning=FALSE, results = "hide"}
+umap_params1 = expand.grid(n_neighbors = c(10, 20, 50, 100, 150, 200),min_dist = c(0.5, 0.75, 1.1))
 
 umaps = lapply(seq(nrow(umap_params1)), function(i) {
     emb = umap(
@@ -176,26 +53,25 @@ umaps = lapply(seq(nrow(umap_params1)), function(i) {
 
   return(emb)
 })
-
 ```
 
-```{r}
+```{r, message=FALSE, warning=FALSE, include=FALSE}
 d1 = rbindlist(lapply(seq(nrow(umap_params1)), function(i) {
   data.table(
     x = umaps[[i]][,1],
     y = umaps[[i]][,2],
     n_neighbors = umap_params1$n_neighbors[i],
     min_dist = umap_params1$min_dist[i],
-    group = as.factor(df$Potability)
+    Potability = as.factor(df$Potability)
   )
 }))
 ```
 
 
-```{r}
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
 p1<-ggplot(d1) +
   geom_scattermore(
-    mapping = aes(x = x, y = y,,colour=group),
+    mapping = aes(x = x, y = y,,colour=Potability),
     pointsize = 2
   ) +
   theme(
@@ -213,16 +89,16 @@ p1<-ggplot(d1) +
 p1
 ```
 
+**Los gifs con las animaciones se incluyen en la carpeta de envío.**
 
-```{r}
-colores = c('#E178C5','#EB5B00')
-names(colores) = c("B","M")
+```{r, message=FALSE, warning=FALSE, include=FALSE}
+colores = c("0" = "#ec7d15","1" = '#10b9ec')
 
 anim_plot1<-d1 %>% 
-  filter(n_neighbors == 10 | n_neighbors == 20 | n_neighbors == 50 | n_neighbors == 100) %>% 
+  filter(n_neighbors == 10 | n_neighbors == 20 | n_neighbors == 50 | n_neighbors == 100 | n_neighbors == 150 | n_neighbors == 200) %>% 
   mutate(parametros = factor(paste('n_neighbors:', n_neighbors, 'min_dist:', min_dist))) %>% ggplot() +
   geom_scattermore(
-    mapping = aes(x = x, y = y, col = group),
+    mapping = aes(x = x, y = y, col = Potability),
     pointsize = 2
   ) +
   theme(
@@ -238,53 +114,14 @@ anim_plot1<-d1 %>%
   labs(title = '{closest_state}')
 
 animate(anim_plot1, nframes = 300)
+anim_save("gifUMAP1.gif")
 ```
 
 
-```{r}
-anim_plot2<-d1 %>% 
-  filter(min_dist == 0.5 | min_dist == 0.75 | min_dist == 1.1) %>% 
-  mutate(parametros = factor(paste('n_neighbors:', n_neighbors, 'min_dist:', min_dist))) %>% ggplot() +
-  geom_scattermore(
-    mapping = aes(x = x, y = y, col = group),
-    pointsize = 2
-  ) +
-  theme(
-    axis.text = element_blank(),
-    axis.ticks = element_blank(),
-    axis.title = element_blank(),
-    legend.position = "none"
-  ) +
-  theme_bw()+
-  labs(title = 'Selección de parámetros')+
-  scale_color_manual(values = colores) + 
-  transition_states(parametros, transition_length = 2, state_length = 3) +
-  labs(title = '{closest_state}')
+### Conclusión UMAP
 
-animate(anim_plot2, nframes = 300)
+En los distintos casos de hiperparámetros podemos observar que con este método de reducción de dimensiones tampoco fue posible separar reducir la dimensión de los datos ni separar los grupos de potabilidad.
 
-```
+## Conclusión.
 
-
-###Aqui decidimos cual es nuestra mejor seleccion y ajustamos el modelo final
-
-###Por ejemplo min_dist=0.5 y n_neighbors=100
-
-Final_plot<-d1 %>% 
-  filter(min_dist == 0.5 , n_neighbors == 100) %>% 
-  mutate(parametros = factor(paste('n_neighbors:', n_neighbors, 'min_dist:', min_dist))) %>% ggplot() +
-  geom_scattermore(
-    mapping = aes(x = x, y = y, col = group),
-    pointsize = 1.1
-  ) +
-  theme(
-    axis.text = element_blank(),
-    axis.ticks = element_blank(),
-    axis.title = element_blank(),
-    legend.position = "none"
-  ) +
-  theme_bw()+
-  labs(title = 'UMAP: Modelo final')
-
-Final_plot
-
+En los tres métodos presentados no fue posible reducir la dimensión de los datos. Esto se puede deber a la baja correlación de las distintas variables. Esto podría ser un indicio de independencia de las variables, mostrando que cada variable aporta algo distinto e igualmente importante a la clasificación en la potabilidad.
